apps/production/drawbridge/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawbridge
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: drawbridge
        image: ghcr.io/profianinc/drawbridge@sha256:d303a0e8486868d7f328dd0348e9883bdd2b26404078e16227215e58f09a7082
