apps/production/drawbridge/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawbridge
spec:
  rules:
  - host: store.profian.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drawbridge
            port:
              number: 8080
